CSS page changes and About page creation

--- a/BIT Security/CSS/Main.css
+++ b/BIT Security/CSS/Main.css
@@ -1,102 +1,6 @@
-/*Home Page CSS*/
-.homeBanner {
-    position: relative;
-    background-image: url("../Media/General/banner-1-work-scaled.jpg");
-    width: 100%;
-    height: 550px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    vertical-align: middle;
-    margin-top: 180px;
-}
-.homeBanner h1 {
-    font-family: "Obvia Narrow", sans-serif;
-    font-weight: 600;
-    font-size: 43px;
-    margin-top: 150px;
-    line-height: 48px;
-    color: var(--accent);
-}
-.homeBanner h1 span {
-    color: var(--main);
-}
-.homeBanner p {
-    color: var(--text);
-    font-family: "Obvia Narrow", sans-serif;
-    font-weight: 600;
-    line-height: 24px;
-    font-size: 18px;
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
-.homeBannerText {
-    margin-left: 40px;
-    max-width: 500px;
-    position: absolute;
-    top: 35%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
+/*Unique CSS - used whe CSS is not already in Global*/
 
 /*Contact Us Page CSS*/
-.ContactBanner {
-    position: relative;
-    background-color: var(--main);
-    width: 100%;
-    height: 550px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    vertical-align: middle;
-    margin-top: 180px;
-}
-.ContactBanner img {
-    height: 100%;
-    width: auto;
-    margin-left: 42%;
-}
-.ContactBanner h1 {
-    font-family: "Obvia Narrow", sans-serif;
-    font-weight: 600;
-    font-size: 43px;
-    margin-top: 50px;
-    line-height: 48px;
-    color: white;
-}
-.ContactBanner h2 {
-    font-family: "Obvia Narrow", sans-serif;
-    font-weight: 600;
-    font-size: 37px;
-    margin-top: 170px;
-    line-height: 40px;
-    color: #002b2a;
-}
-.ContactBanner p {
-    color: white;
-    font-family: "Obvia Narrow", sans-serif;
-    font-weight: 400;
-    line-height: 24px;
-    font-size: 16px;
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
-.ContactBanner p a {
-    text-decoration: none;
-    color: white;
-    font-weight: 600;
-}
-.ContactBanner p a:hover{
-    text-decoration: underline;
-}
-.ContactBannerText {
-    margin-left: 50px;
-    max-width: 400px;
-    position: absolute;
-    top: 35%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
 .Contacts-img {
     width: 100%;
     height: auto;
