--- a/BIT Security/CSS/global.css
+++ b/BIT Security/CSS/global.css
@@ -258,13 +258,13 @@ body {
     line-height: 20px;
     color: var(--text);
 }
-.blocks {
+.Carousel .blocks {
     display: flex;
     width: 100%;
     height: auto;
 
 }
-.block {
+.Carousel .block {
     flex: 0 0 33.33%;
     text-align: center;
 }
@@ -272,7 +272,7 @@ body {
     text-align: center;
     margin-top: 10px;
 }
-.block img {
+.Carousel .block img {
     width: 250px;
     height: auto;
 }
@@ -285,6 +285,82 @@ body {
     top: 40px;
 }
 
+
+.Feedback {
+    margin-left: -100px;
+    margin-right: -100px;
+    padding: 100px 100px;
+    width: 100%;
+    height: auto;
+    margin-bottom: 100px;
+    background-color: #f8f8f8;
+}
+.Feedback h2, .Feedback h3 {
+    text-align: center;
+}
+.Feedback h3 {
+    color: var(--main);
+    line-height: 30px;
+    font-size: 20px;
+    font-family: "Obvia Narrow", sans-serif;
+    font-weight: 500;
+}
+.Feedback h2 {
+    color: var(--accent);
+    line-height: 38px;
+    font-size: 50px;
+    margin-bottom: 100px;
+    font-family: "Obvia Narrow", sans-serif;
+    font-weight: 600;
+}
+.Feedback .blocks {
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+.Feedback .block {
+    flex: 0 0 33.33%;
+    background-color: white;
+    border-radius: 25px;
+}
+.Feedback .block h4 {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10%;
+    color: var(--accent);
+    font-family: "Obvia Narrow", sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 30px;
+}
+.Feedback .block h5 {
+    margin-left: 10%;
+    margin-right: 10%;
+    color: var(--main);
+    font-family: "Obvia Narrow", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+}
+.Feedback .block p {
+    margin-left: 10%;
+    margin-right: 10%;
+    color: var(--text);
+    font-family: "Obvia Narrow", sans-serif;
+    font-size: 16px;
+    line-height: 25px;
+}
+.Feedback .block a {
+    margin-left: 10%;
+}
+.Feedback .blocks .block img {
+    width: 120px;
+    height: auto;
+    border: 4px solid var(--main);
+    border-radius: 50%;
+    margin-left: 10%;
+    margin-top: -50px;
+    background-color: white;
+}
 
 /*---------------------FAQ & Locations dropdowns Designs-------------------------*/
 .dropdown {
@@ -395,24 +471,24 @@ color: var(--main);
     justify-content: space-between;
     align-items: center;
 }
+.Image-TextBlock .text {
+    max-width: 50%;
+}
 .Image-TextBlock img {
     flex: 1;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 0;
     margin-bottom: auto;
-    max-width: 40%;
+    max-width: 50%;
     height: auto;
 }
-.Image-TextBlock .text {
+.Image-TextBlock .text p {
     flex: 1;
     font-family: "Obvia Narrow", sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
     color: var(--text);
-    margin-left: 20px;
 }
 .Image-TextBlock .text h2 {
     font-family: "Obvia Narrow", sans-serif;
@@ -423,6 +499,12 @@ color: var(--main);
 }
 .Image-TextBlock .text h2 span {
     color: var(--main);
+}
+#img-left {
+    padding-right: 5%;
+}
+#img-right {
+    padding-left: 5%;
 }
 
 /*---------------------Other Designs-------------------------*/
