--- a/BIT Security/CSS/global.css
+++ b/BIT Security/CSS/global.css
@@ -57,6 +57,7 @@ table {
     --main: #db2b53;
     --accent: #003B4D;
     --text: #828282;
+    --background: #f8f8f8;
 }
 
 body {
@@ -222,7 +223,7 @@ body {
     width: 100%;
     height: max-content;
     margin-top: 50px;
-    background-color: #f8f8f8;
+    background-color: var(--background);
 }
 .Carousel h3 {
     text-align: center;
@@ -293,7 +294,7 @@ body {
     width: 100%;
     height: auto;
     margin-bottom: 100px;
-    background-color: #f8f8f8;
+    background-color: var(--background);
 }
 .Feedback h2, .Feedback h3 {
     text-align: center;
@@ -313,16 +314,18 @@ body {
     font-family: "Obvia Narrow", sans-serif;
     font-weight: 600;
 }
-.Feedback .blocks {
-    display: flex;
-    width: 100%;
-    height: auto;
-}
 .Feedback .block {
-    flex: 0 0 33.33%;
+    flex: 0 0 calc(33.33% - 20px);
+    margin: 0 10px;
     background-color: white;
     border-radius: 25px;
 }
+.Feedback .blocks {
+    display: flex;
+    width: calc(100% - 40px);
+    height: 500px;
+}
+
 .Feedback .block h4 {
     margin-left: 10%;
     margin-right: 10%;
@@ -427,7 +430,13 @@ body {
 .dropdownContent p span {
 color: var(--main);
 }
-
+.FAQ {
+    background-color: var(--background);
+    padding-top: 5%;
+    padding-bottom: 5%;
+    width: 100%;
+    height: auto;
+}
 
 /*---------------------Text Blocks & image Designs-------------------------*/
 
@@ -473,6 +482,8 @@ color: var(--main);
 }
 .Image-TextBlock .text {
     max-width: 50%;
+    max-height: auto;
+    margin-bottom: 0;
 }
 .Image-TextBlock img {
     flex: 1;
@@ -563,4 +574,38 @@ color: var(--main);
     font-family: "Obvia Narrow", sans-serif;
     letter-spacing: 1px;
     margin-top: 30px;
+}
+
+/*BIT Group Logos*/
+.BITgroup {
+    width: 100%;
+    height: auto;
+    padding-bottom: 10%;
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+}
+
+#packagesTable {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+#packagesTable td, #packagesTable th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+#packagesTable tr:nth-child(even){background-color: #f2f2f2;}
+#packagesTable th {
+padding-top: 12px;
+padding-bottom: 12px;
+text-align: left;
+background-color: var(--main);
+color: white;
+}
+.fa-check {
+    color: green;
+}
+.fa-xmark {
+    color: red;
 }
