--- a/BIT Security/CSS/header+footer.css
+++ b/BIT Security/CSS/header+footer.css
@@ -1,3 +1,4 @@
+/*Header styling*/
 .header {
     width: 100%;
     height: 130px;
@@ -61,72 +62,6 @@
     font-size: 12px;
 }
 
-.footer {
-    position: relative;
-    width: 100%;
-    height: 75vh;
-    background-color: var(--accent);
-    bottom: 0%;
-    font-family: "Obvia Narrow", sans-serif;
-    padding-left: 10%;
-    padding-right: 10%;
-    color: #fff;
-}
-
-.btm-nav-logo {
-    position: relative;
-    top: 10%;
-    width: 270px;
-    height: auto;
-}
-.btm-nav {
-    width: 80%;
-    position: relative;
-    top: 15%;
-}
-.btm-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    justify-content: space-between; /* Align items horizontally with equal space between them */
-}
-
-.btm-nav li {
-    flex: 1; /* Each list item takes up equal space */
-    text-align: center;
-    padding: 10px 0; /* Adjust padding as needed */
-}
-
-.btm-nav a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.5;
-    transition: 0.3s;
-}
-
-.btm-nav a:hover {
-    color: var(--main);
-}
-
-.news-form, .btm-text {
-    position: relative;
-    top: 15%;
-}
-
-.news-form h3 {
-    font-weight: 600;
-    line-height: 24px;
-    font-size: 24px;
-}
-.socials {
-    position: absolute;
-    margin-left: 60%;
-}
-
-/*Under here*/
 .top-nav ul { 
     margin: 150px auto 0; 
     padding: 0; 
@@ -194,6 +129,71 @@
 }
 
 
+/*Footer styling*/
+.footer {
+    position: relative;
+    width: 100%;
+    height: 75vh;
+    background-color: var(--accent);
+    bottom: 0%;
+    font-family: "Obvia Narrow", sans-serif;
+    padding-left: 10%;
+    padding-right: 10%;
+    color: #fff;
+}
+
+.btm-nav-logo {
+    position: relative;
+    top: 10%;
+    width: 270px;
+    height: auto;
+}
+.btm-nav {
+    width: 80%;
+    position: relative;
+    top: 15%;
+}
+.btm-nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.btm-nav li {
+    flex: 1;
+    text-align: center;
+    padding: 10px 0;
+}
+
+.btm-nav a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.5;
+    transition: 0.3s;
+}
+
+.btm-nav a:hover {
+    color: var(--main);
+}
+
+.news-form, .btm-text {
+    position: relative;
+    top: 15%;
+}
+
+.news-form h3 {
+    font-weight: 600;
+    line-height: 24px;
+    font-size: 24px;
+}
+.socials {
+    position: absolute;
+    margin-left: 60%;
+}
 .news-form {
     width: 100%;
     height: auto;
