--- a/BIT Security/CSS/global.css
+++ b/BIT Security/CSS/global.css
@@ -505,6 +505,12 @@ color: var(--main);
     color: var(--text);
     margin-left: 20px;
 }
+.Title-TextBlock p span {
+    color: var(--accent);
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: 600;
+}
 
 /*Image left and Text right block*/
 .Image-TextBlock {
